--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -287,7 +287,7 @@ services:
     environment:
       <<: *default-environment
       # wildcard certificate for reverse proxy
-      SUBJECT_ALTERNATE_NAMES: '*'
+      SUBJECT_ALTERNATE_NAMES: '*,*.livechat'
       ORG_UNIT: productOS
       SSH_KEY_NAMES: 'livechat,'
     entrypoint:
