--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -94,6 +94,7 @@
     "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.9.0",
     "@testing-library/react": "^12.1.5",
+    "@types/bluebird": "^3.5.36",
     "@types/common-tags": "^1.8.1",
     "@types/debounce-promise": "^3.1.4",
     "@types/enzyme": "^3.10.12",
@@ -103,6 +104,7 @@
     "@types/howler": "^2.2.7",
     "@types/is-uuid": "^1.0.0",
     "@types/jest": "^27.5.2",
+    "@types/node-emoji": "^1.8.1",
     "@types/pluralize": "^0.0.29",
     "@types/react-csv": "^1.1.2",
     "@types/react-dom": "^17.0.17",
@@ -110,6 +112,7 @@
     "@types/react-select": "^5.0.1",
     "@types/redux-mock-store": "^1.0.3",
     "@types/sinon": "^10.0.11",
+    "@types/webscopeio__react-textarea-autocomplete": "^4.7.2",
     "browser-env": "^3.3.0",
     "canvas": "^2.9.1",
     "catch-uncommitted": "^2.0.0",
