UI: Don't allow unused variables
Change-type: patch
Signed-off-by: Lucian Buzzo <lucian.buzzo@gmail.com>

--- a/apps/ui/.gitignore
+++ b/apps/ui/.gitignore
@@ -1,9 +1,11 @@
 env-config.js
 
 # Doc files should not be committed. They are generated using
-# the command 'npm run doc' and committed to the root of the 
+# the command 'npm run doc' and committed to the root of the
 # 'docs' branch.
 docs/
 
 # Ignore local build output (typescript definition files)
 build/
+
+.prettierrc
