--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -35,7 +35,7 @@
     "@balena/jellyfish-plugin-outreach": "^4.2.1",
     "@balena/jellyfish-plugin-product-os": "^7.1.3",
     "@balena/jellyfish-plugin-typeform": "^9.0.0",
-    "@balena/jellyfish-worker": "^31.1.0",
+    "@balena/jellyfish-worker": "31.2.0-ramirogm-async-triggers-2-ad555c0e20f27ca245d5b5535a4b8866234e588c",
     "@balena/socket-prometheus-metrics": "^0.0.3",
     "autumndb": "^20.3.3",
     "aws-sdk": "^2.1157.0",
